# wizcam

./: CMakeLists.txt  README.md  freecam.cpp  freecam.h  main.cpp  patcher.cpp  patcher.h  processfinder.cpp  processutils.cpp  processutils.h
.github/workflows/: build.yml  release.yml
freecam/include/: camera.h  patcher.h
freecam/src/: camera.cpp  main.cpp  patcher.cpp
shared/include/: processutils.h
shared/src/: processutils.cpp
zoomhack/src/: zoomhack.cpp
